--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
   <link rel="stylesheet" href="css/main.css">
   <title>Birbingo - Bird spotting open source game</title>
+
+  <!-- Meta Tags -->
+  <meta name="theme-color" content="#F0EAE4">
+  <link rel="apple-touch-icon" href="site-icon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Birbingo™">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Social Tags -->
+  <meta property="og:image" content="/images/unfurl.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="/images/unfurl.png">
+
 </head>
 <body class="antialiased">
   
