--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
       <div class="flex lg:flex-1">
         <a href="#" class="-m-1.5 p-1.5">
-          <span class="sr-only">Your Company</span>
+          <span class="sr-only">Birbingo</span>
           <img class="h-8 w-auto" src="images/favicon.png" alt="">
         </a>
       </div>
@@ -55,7 +55,7 @@
       </svg>
       <rect width="100%" height="100%" stroke-width="0" fill="url(#83fd4e5a-9d52-42fc-97b6-718e5d7ee527)" />
     </svg>
-    <div class="mx-auto max-w-7xl px-6 py-24 lg:flex lg:items-top lg:gap-x-16 lg:px-8">
+    <div class="mx-auto max-w-7xl px-6 py-24 lg:flex lg:items-top lg:gap-x-16 lg:px-8 lg:justify-between">
       <div class="mx-auto max-w-2xl lg:mx-0 lg:flex-auto">
         <div class="flex lg:pt-24">
           <div class="relative flex items-center gap-x-4 rounded-full px-4 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
@@ -77,7 +77,7 @@
           <a href="#" class="text-base font-semibold leading-6 text-gray-900">It's free! <span aria-hidden="true"></span></a>
         </div>
       </div>
-      <div class="mt-16 sm:mt-24 lg:mt-0 lg:flex-shrink-0 lg:flex-grow">
+      <div class="mt-16 sm:mt-24 lg:mt-0">
         <svg width="366" height="729" viewBox="0 0 366 729" fill="none" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <clipPath id="2ade4387-9c63-4fc4-b754-10e687a0d332">
@@ -96,6 +96,100 @@
     </div>
   </div>
 </div>
+
+<div class="bg-white py-24 sm:py-32">
+  <div class="mx-auto max-w-7xl px-6 lg:px-8">
+    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+      <div>
+        <h2 class="text-base font-semibold leading-7 text-[#006E38]">What is this?</h2>
+        <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">A bird app for birders</p>
+        <p class="mt-6 text-base leading-7 text-gray-600">Birbingo™️ is a simple free app for birders who already recognize the birds they see. Make sense and assign a variable score each time you visit the bird blind at your favorite park.</p>
+      </div>
+      <dl class="col-span-2 grid grid-cols-1 gap-x-8 gap-y-10 text-base leading-7 text-gray-600 sm:grid-cols-2 lg:gap-y-16">
+        <div class="relative pl-9">
+          <dt class="font-semibold text-gray-900">
+            <svg class="absolute left-0 top-1 h-5 w-5 text-[#006E38]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+            </svg>
+            Local Bird List
+          </dt>
+          <dd class="mt-2">Edit and control your spicific local bird list and each bird's point value.</dd>
+        </div>
+        <div class="relative pl-9">
+          <dt class="font-semibold text-gray-900">
+            <svg class="absolute left-0 top-1 h-5 w-5 text-[#006E38]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+            </svg>
+            LocalStorage Support
+          </dt>
+          <dd class="mt-2">All data is stored locally. No cookies, no tracking, no weirdo bulllscat.</dd>
+        </div>
+        <div class="relative pl-9">
+          <dt class="font-semibold text-gray-900">
+            <svg class="absolute left-0 top-1 h-5 w-5 text-[#006E38]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+            </svg>
+            Mobile Ready
+          </dt>
+          <dd class="mt-2">Use the web app and select <strong>Install App</strong> or <strong>Add to Homescreen</strong> to get rolling.</dd>
+        </div>
+        <div class="relative pl-9">
+          <dt class="font-semibold text-gray-900">
+            <svg class="absolute left-0 top-1 h-5 w-5 text-[#006E38]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+            </svg>
+            High Scores
+          </dt>
+          <dd class="mt-2">Each bird is worth a differe amount of points. See more birds, score more points.</dd>
+        </div>
+        <div class="relative pl-9">
+          <dt class="font-semibold text-gray-900">
+            <svg class="absolute left-0 top-1 h-5 w-5 text-[#006E38]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
+            </svg>
+            Custom Locations
+          </dt>
+          <dd class="mt-2">Geo smart. Enter a list of common parks or add a custom location per outing.</dd>
+        </div>
+        
+      </dl>
+    </div>
+  </div>
+</div>
+
+<div class="overflow-hidden bg-white py-32">
+  <div class="mx-auto max-w-7xl px-6 lg:flex lg:px-8">
+    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-12 gap-y-16 lg:mx-0 lg:min-w-full lg:max-w-none lg:flex-none lg:gap-y-8">
+      <div class="lg:col-end-1 lg:w-full lg:max-w-lg lg:pb-8">
+        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">For real</h2>
+        <p class="mt-6 text-xl leading-8 text-gray-600">What am I looking at here? Some <a href="https://twitter.com/clarklab">dude</a> made an app using ChatGPT. This is that app. Clone it on <a href="https://github.com/clarklab/birbingo">GitHub</a> or use the <a href="https://app.birbingo.com">public webapp.</a></p>
+      
+        <div class="mt-8 flex items-center gap-x-6">
+          <a href="https://app.birbingo.com" class="rounded-full bg-[#779E32] px-8 py-4 text-2xl lg:text-3xl font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Try Birbingo</a>
+          <a href="#" class="text-base font-semibold leading-6 text-gray-900">It's free! <span aria-hidden="true"></span></a>
+        </div>
+      </div>
+      <div class="flex flex-wrap items-start justify-end gap-6 sm:gap-8 lg:contents">
+        <div class="w-0 flex-auto lg:ml-auto lg:w-auto lg:flex-none lg:self-end">
+          <img src="https://images.unsplash.com/photo-1663807675862-e4505b4b7b91?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1540&q=80" alt="" class="aspect-[7/5] w-[37rem] max-w-none rounded-2xl bg-gray-50 object-cover">
+        </div>
+        <div class="contents lg:col-span-2 lg:col-end-2 lg:ml-auto lg:flex lg:w-[37rem] lg:items-start lg:justify-end lg:gap-x-8">
+          <div class="order-first flex w-64 flex-none justify-end self-end lg:w-auto">
+            <img src="https://images.unsplash.com/photo-1444464666168-49d633b86797?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YmlyZHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="" class="aspect-[4/3] w-[24rem] max-w-none flex-none rounded-2xl bg-gray-50 object-cover">
+          </div>
+          <div class="flex w-96 flex-auto justify-end lg:w-auto lg:flex-none">
+            <img src="https://images.unsplash.com/photo-1575503221721-8d99cfa3e273?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="" class="aspect-[7/5] w-[37rem] max-w-none flex-none rounded-2xl bg-gray-50 object-cover">
+          </div>
+          <div class="hidden sm:block sm:w-0 sm:flex-auto lg:w-auto lg:flex-none">
+            <img src="https://images.unsplash.com/photo-1484704324500-528d0ae4dc7d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="" class="aspect-[4/3] w-[24rem] max-w-none rounded-2xl bg-gray-50 object-cover">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 
 <script>
