--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </a>
           </div>
         </div>
-        <h1 class="mt-10 text-4xl font-bold tracking-tight text-gray-900 sm:text-8xl">Win at birds.</h1>
+        <h1 class="mt-10 text-6xl font-bold tracking-tight text-gray-900 sm:text-8xl">Win at birds.</h1>
         <p class="mt-6 text-2xl leading-8 text-gray-600">For real. Bird watch, keep score, remember your outings, tweak your settings, <strong class="font-semibold">win at birds.</strong></p>
         <div class="mt-8 flex items-center gap-x-6">
           <a href="https://app.birbingo.com" class="rounded-full bg-[#779E32] px-8 py-4 text-2xl lg:text-3xl font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:scale-110 hover:-rotate-1 transition-all">Try Birbingo</a>
@@ -92,7 +92,7 @@
 
 <div class="bg-white">
   <div class="mx-auto max-w-7xl py-12 sm:px-6 sm:py-32 lg:px-8">
-    <div class="relative isolate overflow-hidden bg-topo-green px-6 pt-16 sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
+    <div class="relative isolate overflow-hidden bg-topo-green px-6 pt-16 rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0 mx-6 md:mx-0">
       <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-48 lg:text-left">
         <h2 class="text-5xl font-bold tracking-tight text-white lg:text-7xl">Your birding bookkeeper.</h2>
         <p class="mt-6 text-xl leading-8 text-white font-medium">Track while birding or hiking. Birbingo helps you quanitify which outings were especially unique by assigning a score to each birding session.</p>
@@ -106,7 +106,7 @@
 
 <div class="bg-white">
   <div class="mx-auto max-w-7xl py-12 sm:px-6 sm:py-32 lg:px-8">
-    <div class="relative isolate overflow-hidden bg-topo-green px-6 pt-16 sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
+    <div class="relative isolate overflow-hidden bg-topo-green px-6 pt-16 rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0 mx-6 md:mx-0">
       <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-48 lg:text-left">
         <h2 class="text-5xl font-bold tracking-tight text-white lg:text-7xl">Smarts,<br>not snoops.</h2>
         <p class="mt-6 text-xl leading-8 text-white font-medium">The geolocation works by the name you type in for the location, not your actual GPS coords. No device permissions or personal data required.</p>
@@ -230,7 +230,7 @@ DIY (or don't)
 </div>
 
 
-<footer class="mx-8 lg:mx-0 lg:mx-auto flex md:flex-cols-2 place-content-between max-w-6xl pt-6 pb-24 border-yellow-800/20 border-t-2">
+<footer class="mx-8 lg:mx-0 lg:mx-auto flex items-center md:flex-cols-2 place-content-between max-w-6xl pt-6 pb-24 border-yellow-800/20 border-t-2">
   <div class="flex items-center gap-4"><svg width="32" height="32" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
 <circle cx="30" cy="30" r="30" fill="black"/>
 <g clip-path="url(#clip0_910_6)">
