--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="mx-auto max-w-7xl px-6 py-24 pb-16 lg:flex lg:items-top lg:gap-x-16 lg:px-8 lg:justify-between">
       <div class="mx-auto max-w-2xl lg:mx-0 lg:flex-auto">
         <div class="flex lg:pt-24">
-          <div class="relative flex items-center gap-x-4 rounded-full px-4 py-2 text-base leading-6 text-gray-600 bg-white hover:scale-110 hover:-rotate-1 transition-all">
+          <div class="relative flex items-center gap-x-4 rounded-full px-4 py-2 text-sm sm:text-base leading-6 text-gray-600 bg-white hover:scale-110 hover:-rotate-1 transition-all">
             <span class="font-semibold text-[#006E38]">Written with AI</span>
             <span class="h-4 w-px bg-gray-900/10" aria-hidden="true"></span>
             <a href="https://github.com/clarklab/birbingo/" class="flex items-center gap-x-1">
@@ -63,14 +63,14 @@
             </a>
           </div>
         </div>
-        <h1 class="mt-10 text-6xl font-bold tracking-tight text-gray-900 sm:text-8xl">Win at birds.</h1>
+        <h1 class="mt-10 text-5xl sm:text-6xl font-bold tracking-tight text-gray-900 sm:text-8xl">Win at birds.</h1>
         <p class="mt-6 text-2xl leading-8 text-gray-600">For real. Bird watch, keep score, remember your outings, tweak your settings, <strong class="font-semibold">win at birds.</strong></p>
         <div class="mt-8 flex items-center gap-x-6">
           <a href="https://app.birbingo.com" class="rounded-full bg-[#779E32] px-8 py-4 text-2xl lg:text-3xl font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 hover:scale-110 hover:-rotate-1 transition-all">Try Birbingo</a>
           <a href="#" class="text-xl font-semibold leading-6 text-gray-900">It's free! <span aria-hidden="true"></span></a>
         </div>
       </div>
-      <div class="mt-16 sm:mt-24 lg:mt-0">
+      <div class="mt-16 sm:mt-24 lg:mt-0 px-4">
         <div class="device mx-auto w-[22.875rem] max-w-full drop-shadow-xl">
           <img class="screen" src="images/screen-1.png" alt="" />
         </div>
@@ -83,7 +83,7 @@
   <div class="mx-auto max-w-7xl py-12 sm:px-6 sm:py-32 lg:px-8">
     <div class="relative isolate overflow-hidden bg-topo-green px-6 pt-16 rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0 mx-6 md:mx-0">
       <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-48 lg:text-left">
-        <h2 class="text-5xl font-bold tracking-tight text-white lg:text-7xl">Your birding bookkeeper.</h2>
+        <h2 class="text-4xl sm:text-5xl font-bold tracking-tight text-white lg:text-7xl">Your birding bookkeeper.</h2>
         <p class="mt-6 text-xl leading-8 text-white font-medium">Track while birding or hiking. Birbingo helps you quanitify which outings were especially unique by assigning a score to each birding session.</p>
       </div>
       <div class="relative mt-16 h-80 lg:mt-8">
@@ -97,7 +97,7 @@
   <div class="mx-auto max-w-7xl py-12 sm:px-6 sm:py-32 lg:px-8">
     <div class="relative isolate overflow-hidden bg-topo-green px-6 pt-16 rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0 mx-6 md:mx-0">
       <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-48 lg:text-left">
-        <h2 class="text-5xl font-bold tracking-tight text-white lg:text-7xl">Smarts,<br>not snoops.</h2>
+        <h2 class="text-4xl sm:text-5xl font-bold tracking-tight text-white lg:text-7xl">Smarts,<br>not snoops.</h2>
         <p class="mt-6 text-xl leading-8 text-white font-medium">The geolocation works by the name you type in for the location, not your actual GPS coords. No device permissions or personal data required.</p>
       </div>
       <div class="relative mt-16 h-80 lg:mt-8">
